2001-06-24  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/account-piecharts.scm: fix sign bug

	* src/engine/sql/kvp-sql.c: same as below

	* src/engine/sql/txn.c: same as below

	* src/engine/sql/price.c: same as below

	* src/engine/sql/checkpoint.c: use strtoll instead of atoll

2001-06-24  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* configure.in: Alex Zepeda's postgres configure patch

2001-06-23  Kevin Finn  <kevinfinn@mediaone.net>

	* src/gnome/window-reconcile.c: fix for display of auto end value
	updates.

2001-06-23  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-about.sgml: credits

	* AUTHORS: credits

	* configure.in: Bill Nottingham's guile configuration patch

2001-06-20  Dave Peticolas  <dave@krondo.com>

	* src/gnome/Makefile.am: remove glade cruft

2001-06-20  Dave Peticolas  <dave@krondo.com>

	* configure.in: better error messages. remove cruft.

2001-06-17  Dave Peticolas  <dave@krondo.com>

	* src/gnome/cursors.c (gnc_set_busy_cursor): fix warning

	* src/scm/date-utilities.scm: use gnc:print-date instead of
	strftime

	* src/scm/report/hello-world.scm: fix docs

	* src/scm/report/transaction-report.scm: fix date printing

	* src/scm/report/register.scm: remove cruft

	* src/register/gnome/gnucash-style.c (gnucash_font_load): new func
	If gdk_fontset_load doesn't work, try gdk_font_load.
	(gnucash_style_set_register_font_name): use gnucash_font_load
	(gnucash_style_set_register_hint_font_name): use gnucash_font_load

	* src/FileDialog.c (gncFileSave): save the window state on a save
	(gncFileQuerySave): don't provide cancel option when the ui can't

	* src/scm/main-window.scm (gnc:main-window-save-state): new func
	don't save state when the ui can't

	* src/gnome/window-main.c
	(gnc_main_window_can_cancel_exit): new func
	(gnc_main_window_can_save): new func
	(gnc_main_window_has_apps): new func

	* src/gnc-ui.h: add new api
